@@ -1,3 +1,8 @@
+2006-08-12 Harri Pitkänen  <hatapitk@iki.fi>
+
+	* Do not suggest splitting a word or adding a hyphen in certain
+	  cases where there already is an other hyphen nearby.
+
 2006-07-26 Harri Pitkänen  <hatapitk@iki.fi>
 
 	* Add -no-undefined to libvoikko_la_LDFLAGS, which is supposed to
